# TheMaze

./: .gitignore  CMakeLists.txt  README.md
sqlite3_lib/: sqlite3.exp
src/: ok_lib.h  old_prototypes.c  utilities.h
src/client/: CMakeLists.txt  client.c
src/client/client_server_interface/: interface.c  interface.h
src/local-game/: CMakeLists.txt  game.c  game.h  graphics.c  graphics.h  maze_generator.c  maze_generator.h  names.txt  player.c  player.h  playerInfo.c  playerInfo.h  utilities.c  utilities.h
src/local_game/: CMakeLists.txt  game.c  maze_generator.h  unrefatored_maze_generator.c
src/server/: CMakeLists.txt  MazeGenerator.h  server.c  sqlite3.lib  unrefatored_maze_generator.c
